--- a/ui/lib/core/addon/templates/components/alert-banner.hbs
+++ b/ui/lib/core/addon/templates/components/alert-banner.hbs
@@ -1,4 +1,4 @@
-<div data-test-flash-message="true">
+<div data-test-alert-banner>
   <div class="columns is-mobile is-variable is-1">
     <div class="column is-narrow message-icon">
       <Icon
