--- a/ui/app/templates/components/clients/current.hbs
+++ b/ui/app/templates/components/clients/current.hbs
@@ -54,18 +54,12 @@
         </ToolbarFilters>
       </Toolbar>
     </div>
-    {{! TODO CMB this warning should only show if an upgrade to 1.9 or 1.10 happened in current month }}
-    {{#if this.countsIncludeOlderData}}
+    {{#if this.upgradeDuringCurrentMonth}}
       <AlertBanner @type="warning" @title="Warning">
-        {{concat
-          "You upgraded to Vault "
-          this.latestUpgradeData.id
-          " on "
-          (date-format this.latestUpgradeData.timestampInstalled "MMMM d, yyyy.")
-        }}
-        How we count clients changed in 1.9, so please keep that in mind when looking at the data below, and you can
+        {{this.upgradeVersionAndDate}}
+        {{this.versionSpecificText}}
         <DocLink @path="/docs/concepts/client-count/faq#q-which-vault-version-reflects-the-most-accurate-client-counts">
-          read more here.
+          Learn more here.
         </DocLink>
       </AlertBanner>
     {{/if}}
