--- a/ui/app/templates/components/wizard/mounts-wizard.hbs
+++ b/ui/app/templates/components/wizard/mounts-wizard.hbs
@@ -6,6 +6,7 @@
     actionText=this.actionText
     nextFeature=this.nextFeature
     nextStep=this.nextStep
+    featureState=this.wizard.featureState
     needsConnection=this.needsConnection
     needsEncryption=this.needsEncryption
     isSupported=this.isSupported
