--- a/ui/app/templates/components/wizard/secrets-enable.hbs
+++ b/ui/app/templates/components/wizard/secrets-enable.hbs
@@ -4,6 +4,7 @@
   @docText="Docs: Secrets Engines"
   @docPath="/docs/secrets/index.html"
   @instructions='Fill in the details for your engine and click "Enable Engine"'
+  @class="has-bottom-margin-l"
 >
   <p>
     Good choice! Now you can customize your engine with a name and description that makes sense for your team, as well as
