--- a/ui/app/templates/components/wizard/secrets-idle.hbs
+++ b/ui/app/templates/components/wizard/secrets-idle.hbs
@@ -4,6 +4,7 @@
   @docText="Docs: Secrets Engines"
   @docPath="/docs/secrets/index.html"
   @instructions='Select an engine and click "Next"'
+  @class="has-bottom-margin-l"
 >
   <p>
     Vault is all about managing secrets, so let's set up your first Secrets Engine. You can use a static engine to store your
