setup glimmer of first

--- a/ui/app/templates/components/tool-actions-form.hbs
+++ b/ui/app/templates/components/tool-actions-form.hbs
@@ -8,6 +8,7 @@
       @errors={{this.errors}}
       @format={{this.format}}
       @input={{input}}
+      @onChange={{action "onHash"}}
     />
     {{! template-lint-enable no-passed-in-event-handlers }}
   {{else if (eq this.selectedAction "random")}}
