--- a/ui/app/templates/components/transit-key-action/encrypt.hbs
+++ b/ui/app/templates/components/transit-key-action/encrypt.hbs
@@ -35,7 +35,7 @@
             <Input @type="text" id="context" @value={{@context}} class="input" data-test-transit-input="context" />
           </div>
           <div class="control">
-            <B64Toggle @value={{@context}} @data-test-transit-b64-toggle="context" />
+            <B64Toggle @value={{@context}} @dataTestType="context" />
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <label for="nonce" class="is-label">Nonce</label>
           </div>
           <div class="level-right">
-            <B64Toggle @value={{@nonce}} @data-test-transit-b64-toggle="nonce" />
+            <B64Toggle @value={{@nonce}} @dataTestType="nonce" />
           </div>
         </div>
         <div class="control">
