--- a/ui/app/templates/components/transit-key-action/sign.hbs
+++ b/ui/app/templates/components/transit-key-action/sign.hbs
@@ -47,7 +47,7 @@
             <Input @type="text" id="context" @value={{@context}} class="input" data-test-transit-input="context" />
           </div>
           <div class="control">
-            <B64Toggle @value={{@context}} @data-test-transit-b64-toggle="context" />
+            <B64Toggle @value={{@context}} @dataTestType="context" />
           </div>
         </div>
       </div>
