--- a/ui/app/templates/components/transit-key-action/datakey.hbs
+++ b/ui/app/templates/components/transit-key-action/datakey.hbs
@@ -28,7 +28,7 @@
             <Input @type="text" id="context" @value={{@context}} class="input" data-test-transit-input="context" />
           </div>
           <div class="control">
-            <B64Toggle @value={{@context}} @data-test-transit-b64-toggle="context" />
+            <B64Toggle @value={{@context}} @dataTestType="context" />
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
             <Input @type="text" id="nonce" @value={{@nonce}} class="input" data-test-transit-input="nonce" />
           </div>
           <div class="control">
-            <B64Toggle @value={{@nonce}} @data-test-transit-b64-toggle="nonce" />
+            <B64Toggle @value={{@nonce}} @dataTestType="nonce" />
           </div>
         </div>
       </div>
