--- a/ui/app/templates/components/tool-actions-form.hbs
+++ b/ui/app/templates/components/tool-actions-form.hbs
@@ -1,5 +1,5 @@
-<form onsubmit={{action "doSubmit"}}>
-  {{#if (eq this.selectedAction "hash")}}
+<form {{on "submit" this.doSubmit}}>
+  {{#if (eq @selectedAction "hash")}}
     {{! template-lint-disable no-passed-in-event-handlers }}
     <ToolHash
       @onClear={{action "onClear"}}
@@ -8,10 +8,10 @@
       @errors={{this.errors}}
       @format={{this.format}}
       @input={{input}}
-      @onChange={{action "onHash"}}
+      @onChange={{this.onHash}}
     />
     {{! template-lint-enable no-passed-in-event-handlers }}
-  {{else if (eq this.selectedAction "random")}}
+  {{else if (eq @selectedAction "random")}}
     <ToolRandom
       @onClear={{action "onClear"}}
       @random_bytes={{this.random_bytes}}
@@ -19,16 +19,16 @@
       @format={{this.format}}
       @bytes={{this.bytes}}
     />
-  {{else if (eq this.selectedAction "rewrap")}}
+  {{else if (eq @selectedAction "rewrap")}}
     <ToolRewrap
       @onClear={{action "onClear"}}
       @rewrap_token={{this.rewrap_token}}
-      @selectedAction={{this.selectedAction}}
+      @selectedAction={{@selectedAction}}
       @errors={{this.errors}}
       @token={{this.token}}
       @bytes={{this.bytes}}
     />
-  {{else if (eq this.selectedAction "unwrap")}}
+  {{else if (eq @selectedAction "unwrap")}}
     <ToolUnwrap
       @onClear={{action "onClear"}}
       @unwrap_data={{this.unwrap_data}}
@@ -37,21 +37,21 @@
       @errors={{this.errors}}
       @token={{this.token}}
     />
-  {{else if (eq this.selectedAction "lookup")}}
+  {{else if (eq @selectedAction "lookup")}}
     <ToolLookup
       @creation_time={{this.creation_time}}
       @creation_ttl={{this.creation_ttl}}
       @creation_path={{this.creation_path}}
       @expirationDate={{this.expirationDate}}
-      @selectedAction={{this.selectedAction}}
+      @selectedAction={{@selectedAction}}
       @token={{this.token}}
       @onClear={{action "onClear"}}
       @errors={{this.errors}}
     />
-  {{else if (eq this.selectedAction "wrap")}}
+  {{else if (eq @selectedAction "wrap")}}
     <ToolWrap
       @token={{this.token}}
-      @selectedAction={{this.selectedAction}}
+      @selectedAction={{@selectedAction}}
       @onClear={{action "onClear"}}
       @codemirrorUpdated={{action "codemirrorUpdated"}}
       @updateTtl={{action "updateTtl"}}
