--- a/ui/app/templates/components/tool-actions-form.hbs
+++ b/ui/app/templates/components/tool-actions-form.hbs
@@ -7,7 +7,7 @@
       @algorithm={{this.algorithm}}
       @errors={{this.errors}}
       @format={{this.format}}
-      @input={{input}}
+      @input={{this.input}}
       @onChange={{this.onHash}}
     />
     {{! template-lint-enable no-passed-in-event-handlers }}
