--- a/ui/app/templates/components/clients/current.hbs
+++ b/ui/app/templates/components/clients/current.hbs
@@ -77,6 +77,7 @@
           @newClientsData={{this.newClientsData}}
           @selectedNamespace={{this.selectedNamespace}}
           @startTimeDisplay={{date-format this.responseTimestamp "MMMM yyyy"}}
+          @isCurrentMonth={{true}}
           @isDateRange={{false}}
           @timestamp={{this.responseTimestamp}}
         />
