fix export modal text

--- a/ui/app/templates/components/clients/attribution.hbs
+++ b/ui/app/templates/components/clients/attribution.hbs
@@ -93,8 +93,9 @@
 >
   <section class="modal-card-body">
     <p class="has-bottom-margin-s">
-      This export will include the namespace path, authentication method path, and the associated clients, unique entities,
-      and non-entity tokens for the below date range.
+      This export will include the namespace path, authentication method path, and the associated total, entity, and
+      non-entity clients for the below
+      {{if @isCurrentMonth "month" "date range"}}.
     </p>
     <p class="has-bottom-margin-s is-subtitle-gray">SELECTED DATE {{if @endTimeDisplay " RANGE"}}</p>
     <p class="has-bottom-margin-s">{{@startTimeDisplay}} {{if @endTimeDisplay "-"}} {{@endTimeDisplay}}</p>
