--- a/ui/app/templates/components/clients/current.hbs
+++ b/ui/app/templates/components/clients/current.hbs
@@ -73,8 +73,7 @@
           @chartLegend={{this.chartLegend}}
           @totalUsageCounts={{this.totalUsageCounts}}
           @newUsageCounts={{this.newUsageCounts}}
-          @totalClientsData={{this.totalClientsData}}
-          @newClientsData={{this.newClientsData}}
+          @totalClientAttribution={{this.totalClientAttribution}}
           @selectedNamespace={{this.selectedNamespace}}
           @startTimeDisplay={{date-format this.responseTimestamp "MMMM yyyy"}}
           @isCurrentMonth={{true}}
