--- a/ui/app/templates/vault/cluster/secrets/backend/transit-actions-layout.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/transit-actions-layout.hbs
@@ -51,13 +51,19 @@
         </ul>
       </nav>
     </div>
-
-    <TransitKeyActions
+    <TransitKeyActionsTwo
       @selectedAction={{this.selectedAction}}
       @backend={{this.backend}}
       @key={{this.model}}
       @capabilities={{this.capabilities}}
       @onRefresh={{action "refresh"}}
     />
+    {{!-- <TransitKeyActions
+      @selectedAction={{this.selectedAction}}
+      @backend={{this.backend}}
+      @key={{this.model}}
+      @capabilities={{this.capabilities}}
+      @onRefresh={{action "refresh"}}
+    /> --}}
   </div>
 </div>
