--- a/ui/app/templates/components/transit-key-action/datakey.hbs
+++ b/ui/app/templates/components/transit-key-action/datakey.hbs
@@ -28,7 +28,7 @@
             <Input @type="text" id="context" @value={{@context}} class="input" data-test-transit-input="context" />
           </div>
           <div class="control">
-            <B64Toggle @value={{@context}} @dataTestType="context" />
+            <B64Toggle @value={{@context}} @dataTestType="context" @isInput={{false}} @onChange={{@onHash}} />
           </div>
         </div>
       </div>
