--- a/ui/app/templates/components/clients/line-chart.hbs
+++ b/ui/app/templates/components/clients/line-chart.hbs
@@ -2,8 +2,8 @@
   data-test-line-chart
   class="chart has-grid"
   {{on "mouseleave" this.removeTooltip}}
-  {{did-insert this.renderChart @dataset @upgradeData}}
-  {{did-update this.renderChart @dataset @upgradeData}}
+  {{did-insert this.renderChart @dataset}}
+  {{did-update this.renderChart @dataset}}
 >
 </svg>
 
