--- a/ui/app/templates/vault/cluster/access.hbs
+++ b/ui/app/templates/vault/cluster/access.hbs
@@ -11,6 +11,13 @@
         </LinkTo>
       </li>
     {{/if}}
+    {{#if (has-permission "access" routeParams="mfa")}}
+      <li>
+        <LinkTo @route="vault.cluster.access.mfa" data-test-link={{true}}>
+          Multi-factor authentication
+        </LinkTo>
+      </li>
+    {{/if}}
     {{#if (has-permission "access" routeParams="entities")}}
       <li>
         <LinkTo @route="vault.cluster.access.identity" @model="entities" data-test-link={{true}}>
