initial setup of components and route

--- a/ui/app/styles/core/helpers.scss
+++ b/ui/app/styles/core/helpers.scss
@@ -81,6 +81,7 @@
 .is-flex-start {
   display: flex !important;
   justify-content: flex-start;
+  gap: $spacing-m;
 }
 .is-flex-full {
   flex-basis: 100%;
