--- a/ui/app/templates/components/auth-info.hbs
+++ b/ui/app/templates/components/auth-info.hbs
@@ -16,6 +16,14 @@
               />
             </li>
           {{/if}}
+          {{#if true}}
+            {{! ARG TODO conditional will be if MFA is setup for user but not enforced? }}
+            <li class="action">
+              <LinkTo @route="vault.cluster.mfa-setup">
+                Multi-factor authentication
+              </LinkTo>
+            </li>
+          {{/if}}
           <li class="action">
             <button type="button" class="link" onclick={{action "restartGuide"}}>
               Restart guide
