--- a/ui/app/templates/vault/cluster/mfa-setup.hbs
+++ b/ui/app/templates/vault/cluster/mfa-setup.hbs
@@ -1,15 +1,1 @@
-<SplashPage as |Page|>
-  <Page.header>
-    <h1 class="title is-4">MFA setup</h1>
-  </Page.header>
-  <Page.content>
-    <div class="auth-form" data-test-mfa-form>
-      <div class="box">
-        {{! ARG TODO: conditional here to count steps }}
-        {{! <MfaSetupStepOne /> }}
-        {{! <MfaSetupStepTwo /> }}
-        <MfaSetupStepThree />
-      </div>
-    </div>
-  </Page.content>
-</SplashPage>
+<MfaSetupSteps />
