--- a/ui/app/templates/components/mfa-setup-step-two.hbs
+++ b/ui/app/templates/components/mfa-setup-step-two.hbs
@@ -2,7 +2,7 @@
   TOTP Multi-factor authentication (MFA) can be enabled here if it is required by your administrator. This will ensure that
   you are not prevented from logging into Vault in the future, once MFA is fully enforced.
 </p>
-<form id="mfa-setup-step-two" {{on "submit" this.submit}}>
+<form id="mfa-setup-step-two" {{on "submit" this.verifyAuthenticationCode}}>
   {{!-- <MessageError @errorMessage={{this.error}} class="has-top-margin-s" /> --}}
   <div class="field has-top-margin-l">
     <div>QR CODE HERE</div>
@@ -20,7 +20,7 @@
       spellcheck="false"
       {{!-- @value={{constraint.passcode}} --}}
       {{!-- disabled={{or this.validate.isRunning this.newCodeDelay.isRunning}} --}}
-      @value=""
+      @value={{this.authenticationCode}}
     />
   </div>
 
