--- a/ui/app/templates/vault/cluster/mfa-setup.hbs
+++ b/ui/app/templates/vault/cluster/mfa-setup.hbs
@@ -1,1 +1,21 @@
-<MfaSetupSteps />
+<SplashPage @showTruncatedNavBar={{false}} as |Page|>
+  <Page.header>
+    <h1 class="title is-4">MFA setup</h1>
+  </Page.header>
+  <Page.content>
+    <div class="auth-form" data-test-mfa-form>
+      <div class="box">
+        {{! ARG TODO maybe make in one component or here in this component }}
+        {{#if (eq this.onStep 1)}}
+          <MfaSetupStepOne @isUUIDVerified={{this.isUUIDVerified}} />
+        {{/if}}
+        {{#if (eq this.onStep 2)}}
+          <MfaSetupStepTwo @isAuthenticationCodeVerified={{this.isAuthenticationCodeVerified}} />
+        {{/if}}
+        {{#if (eq this.onStep 3)}}
+          <MfaSetupStepThree />
+        {{/if}}
+      </div>
+    </div>
+  </Page.content>
+</SplashPage>
