clean up adapter and handle warning

--- a/ui/app/templates/components/mfa-setup-step-three.hbs
+++ b/ui/app/templates/components/mfa-setup-step-three.hbs
@@ -2,8 +2,10 @@
   TOTP Multi-factor authentication (MFA) can be enabled here if it is required by your administrator. This will ensure that
   you are not prevented from logging into Vault in the future, once MFA is fully enforced.
 </p>
-
-<AlertBanner @type="success" @title="MFA is enabled" class="has-top-margin-l" />
+{{#if @warning}}
+  <AlertBanner @type="info" @title={{@warning}} class="has-top-margin-l" />
+{{/if}}
 <button id="continue" type="button" class="button has-text-danger" {{on "click" this.restartSetup}}>
   Restart setup
 </button>
+{{! ARG TODO add cancel button }}
