--- a/ui/app/templates/components/clients/running-total.hbs
+++ b/ui/app/templates/components/clients/running-total.hbs
@@ -1,3 +1,4 @@
+{{! TODO Add conditional, show charts if data available, otherwise show stat text boxes  }}
 <div class="chart-wrapper stacked-charts">
   <div class="single-chart-grid">
     <div class="chart-header has-bottom-margin-xl">
