add empty state for no new client counts, when filtered by namespace

--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -133,7 +133,7 @@
           {{#if this.byMonthTotalClients}}
             <Clients::RunningTotal
               @chartLegend={{this.chartLegend}}
-              @selectedNamespace={{this.selectedNamespace}}
+              @selectedAuthMethod={{this.selectedAuthMethod}}
               @lineChartData={{this.byMonthTotalClients}}
               @barChartData={{this.byMonthNewClients}}
               @runningTotals={{this.totalUsageCounts}}
