--- a/ui/app/styles/core/charts.scss
+++ b/ui/app/styles/core/charts.scss
@@ -101,10 +101,13 @@
 }
 
 .chart-empty-state {
-  height: 100%;
-  width: 100%;
+  place-self: center stretch;
   grid-row-end: span 3;
   grid-column-end: span 3;
+  max-width: none;
+  padding-right: 20px;
+  padding-left: 20px;
+
   > div {
     box-shadow: none !important;
   }
