--- a/ui/app/templates/components/clients/running-total.hbs
+++ b/ui/app/templates/components/clients/running-total.hbs
@@ -38,8 +38,17 @@
   </div>
 
   <div class="single-chart-grid">
-    <div class="chart-container-wide">
-      <Clients::VerticalBarChart @dataset={{@barChartData}} @chartLegend={{@chartLegend}} />
+    <div class={{concat (unless this.hasAverageNewClients "chart-empty-state ") "chart-container-wide"}}>
+      <Clients::VerticalBarChart
+        @dataset={{if this.hasAverageNewClients @barChartData false}}
+        @chartLegend={{@chartLegend}}
+        @noDataTitle="No new clients"
+        @noDataMessage={{concat
+          "There are no new clients for this "
+          (if @selectedAuthMethod "auth method" "namespace")
+          " in this date range"
+        }}
+      />
     </div>
 
     <div class="chart-subTitle">
@@ -75,4 +84,5 @@
       <span class="dark-dot"></span><span class="legend-label">{{capitalize @chartLegend.1.label}}</span>
     </div>
   </div>
+
 </div>
