--- a/ui/app/templates/components/mfa-setup-step-two.hbs
+++ b/ui/app/templates/components/mfa-setup-step-two.hbs
@@ -6,10 +6,20 @@
   {{#if @warning}}
     <AlertBanner @type="warning" @title={{@warning}} class="has-top-margin-l" />
   {{else}}
-    {{! template-lint-disable no-curly-component-invocation }}
-    <div>{{qr-code text=@qrCode colorLight="#F7F7F7" width=155 height=155 correctLevel="L"}}</div>
+    <div class="list-item-row">
+      <div class="center-display">
+        {{! template-lint-disable no-curly-component-invocation }}
+        {{qr-code text=@qrCode colorLight="#F7F7F7" width=155 height=155 correctLevel="L"}}
+      </div>
+    </div>
+    <div class="has-top-margin-s">
+      <p>
+        NEED explanation text that on refresh this QR code will be removed and cannot be regenerated. Make sure to scan and
+        add into your authenticator app.
+      </p>
+    </div>
   {{/if}}
-  <div class="is-flex-start has-top-margin-s">
+  <div class="is-flex-start has-top-margin-l">
     <button id="restart" type="button" class="button has-text-danger" {{on "click" this.restartSetup}}>
       Restart setup
     </button>
