fix warning issue

--- a/ui/app/templates/components/mfa-setup-step-one.hbs
+++ b/ui/app/templates/components/mfa-setup-step-one.hbs
@@ -16,7 +16,7 @@
   </div>
 
   <div class="is-flex-start">
-    <button id="continue" type="submit" class="button is-primary">
+    <button id="continue" type="submit" class="button is-primary" disabled={{(is-empty-value this.UUID)}}>
       Verify
     </button>
     <button id="cancel" type="button" {{on "click" this.redirectPreviousPage}} class="button">
