--- a/ui/app/templates/components/mfa-setup-step-two.hbs
+++ b/ui/app/templates/components/mfa-setup-step-two.hbs
@@ -1,6 +1,5 @@
 <p>
-  TOTP Multi-factor authentication (MFA) can be enabled here if it is required by your administrator. This will ensure that
-  you are not prevented from logging into Vault in the future, once MFA is fully enforced.
+  WAITING FOR DESIGN
 </p>
 <div class="field has-top-margin-l">
   <MessageError @errorMessage={{this.error}} class="has-top-margin-s" />
@@ -15,8 +14,7 @@
     </div>
     <div class="has-top-margin-s">
       <p>
-        NEED explanation text that on refresh this QR code will be removed and cannot be regenerated. Make sure to scan and
-        add into your authenticator app.
+        WAITING FOR DESIGN
       </p>
     </div>
   {{/if}}
@@ -24,8 +22,8 @@
     <button id="restart" type="button" class="button has-text-danger" {{on "click" this.restartSetup}}>
       Restart setup
     </button>
-    <button id="cancel" type="button" {{on "click" this.redirectPreviousPage}} class="button">
-      Cancel
+    <button id="cancel" type="button" {{on "click" this.redirectPreviousPage}} class="button is-primary">
+      Done
     </button>
   </div>
 </div>
