handle root user

--- a/ui/app/templates/components/auth-info.hbs
+++ b/ui/app/templates/components/auth-info.hbs
@@ -16,8 +16,7 @@
               />
             </li>
           {{/if}}
-          {{#if true}}
-            {{! ARG TODO conditional will be if MFA is setup for user but not enforced? }}
+          {{#if this.hasEntityId}}
             <li class="action">
               <LinkTo @route="vault.cluster.mfa-setup">
                 Multi-factor authentication
